@@ -1,5 +1,8 @@
 2003-02-05  Per Abrahamsen  <abraham@dina.kvl.dk>
 
+	* weather_std.C: Added assertion about use uninitialized.
+	(tick): Make sure to initialize.
+
 	* time.C (tick_day): Remove BCC warning.
 
 	* Version 2.45 released.
